# LogosLab

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  PERFORMANCE_ANALYSIS.md  README.md  assumptions_file.txt  bench.sh  demo_assumptions.txt  demo_facts.txt  facts_file.txt
.github/: release-drafter.yml
.github/workflows/: benchmark.yml  ci.yml  codeql.yml  release-drafter.yml  release.yml
benchmarks/: benchmarkInference.cpp
benchmarks/results/: bench-release__milans-macbook-prolocal__Darwin-arm64__20260106-142320.json  bench-release__milans-macbook-prolocal__Darwin-arm64__20260106-142320.system.txt  bench-release__milans-macbook-prolocal__Darwin-arm64__20260107-192927.json  bench-release__milans-macbook-prolocal__Darwin-arm64__20260107-192927.system.txt  bench-release__pop-os__Linux-x86_64__20260107-155956.json  bench-release__pop-os__Linux-x86_64__20260107-155956.system.txt  m1Benchmark.txt
include/: Expression.h  InferenceEngine.h  Lexer.h  Parser.h  Proposition.h  Ratiocinator.h
src/: Expression.cpp  InferenceEngine.cpp  Lexer.cpp  Parser.cpp  Proposition.cpp  Ratiocinator.cpp  main.cpp
tests/: testExpression.cpp  testExpressionProperties.cpp  testLexer.cpp  testProposition.cpp  testRatiocinator.cpp
